syntax = "proto3";

package notification;

service NotificationService {
  rpc DispatchNotification(DispatchRequest) returns (DispatchResponse);
}

message DispatchRequest {
  string title = 1;
  string message = 2;
  string recipient = 3;
  int64 sent_at = 4;
}

message DispatchResponse {
  bool success = 1;
  string notification_id = 2;
  int64 processed_at = 3;
  int64 processing_time_ms = 4;
}
